# iced-weather-app

./: Cargo.toml  README.md
src/: main.rs  weather.rs
